# mipiti-mcp

./: LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  dispatch-pointer.yml  publish.yml
src/mipiti_mcp/: __init__.py  assertion_types.py  client.py  server.py  types.py
tests/: conftest.py  test_client.py  test_tools.py
