[project]
name = "mipiti-mcp"
version = "0.1.0"
description = "MCP server for Mipiti — security posture platform"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2,<3",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pydantic>=2",
]

[project.scripts]
mipiti-mcp = "mipiti_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mipiti_mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
