[project]
name = "mipiti-mcp"
version = "0.20.6"
description = "MCP server for Mipiti — AI-powered security posture platform"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.11"
authors = [{name = "Mipiti", email = "support@mipiti.io"}]
keywords = ["mcp", "security", "threat-modeling", "mipiti"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pydantic>=2",
]

[project.urls]
Homepage = "https://mipiti.io"
Documentation = "https://mipiti.io/docs"
Repository = "https://github.com/Mipiti/mipiti-mcp"
Issues = "https://github.com/Mipiti/mipiti-mcp/issues"

[project.scripts]
mipiti-mcp = "mipiti_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mipiti_mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
